--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7",
-        "symfony/http-client": "^6.2",
-        "symfony/mailgun-mailer": "^6.2"
+        "laravel/tinker": "^2.7"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8",
